--- a/src/app/shared/components/navigation-menu/navigation-menu.component.scss
+++ b/src/app/shared/components/navigation-menu/navigation-menu.component.scss
@@ -1,8 +1,12 @@
 @import "../../../../styles/variables";
 
-.mat-toolbar{
-    background-color: $navigationBackgroundColor;
-    padding-top: $navigationPaddingTop;
-    min-height: $navigationHeight;
+#container{
+    .mat-toolbar{
+        @include themed() {
+            background-color: t('globalbg');
+        }
+        background-color: $navigationBackgroundColor;
+        padding-top: $navigationPaddingTop; 
+        min-height: $navigationHeight;
+    }
 }
-
