--- a/src/app/shared/components/parts/expandable-buttons/expandable-buttons.component.html
+++ b/src/app/shared/components/parts/expandable-buttons/expandable-buttons.component.html
@@ -2,7 +2,8 @@
     <mat-menu #salary>
         <div id="salaryMenu" mat-menu-item fxLayout="column">
             <span>Choose min salary</span>
-            <mat-slider 
+            <mat-slider
+                #slider 
                 thumbLabel
                 [displayWith]="formatLabel"
                 min="0"
