--- a/src/app/shared/components/parts/theme-toggler/theme-toggler.component.html
+++ b/src/app/shared/components/parts/theme-toggler/theme-toggler.component.html
@@ -1,5 +1,5 @@
 <div id="container">
     <mat-icon id="leftControllImage">wb_sunny</mat-icon>
-    <mat-slide-toggle color="primary"></mat-slide-toggle>
+    <mat-slide-toggle [(ngModel)]="result" color="primary" (change)="onTogglerChange()"></mat-slide-toggle>
     <mat-icon id="rightControllImage">brightness_3</mat-icon>
 </div>
