--- a/src/app/views/offers/components/offers-content/offers-content.component.html
+++ b/src/app/views/offers/components/offers-content/offers-content.component.html
@@ -3,6 +3,6 @@
         <router-outlet></router-outlet>
     </div>
     <div class="myColumn" fxHide.lt-md>
-        <app-map></app-map>
+        <!-->app-map></app-map-->
     </div>
 </div>
