--- a/src/app/views/offers/components/offers-content/offers-list/offer/offer.component.html
+++ b/src/app/views/offers/components/offers-content/offers-list/offer/offer.component.html
@@ -1,5 +1,5 @@
 <div 
-    class="container" 
+    class="container theme--dark" 
     fxLayout="row" 
     (click)="onMouseClick()"
     [routerLink]="[appRouterUrls.OFFERS, tag]" 
