--- a/src/app/views/offers/components/offers-content/offer-detail/parts/company-info/company-info.component.html
+++ b/src/app/views/offers/components/offers-content/offer-detail/parts/company-info/company-info.component.html
@@ -1,7 +1,7 @@
 <div id="container">
     <div id="frame" #frame fxLayout="column">
         <div id="functionalRow" fxLayout="row">
-            <button id="back" class="functionalButton" [routerLink]="appRouterUrls.OFFERS">
+            <button id="back" class="functionalButton" (click)="onBackClick()">
                 <mat-icon>navigate_before</mat-icon>
             </button>
             <button id="media" class="functionalButton">
