poprawka routingu w przypadku zmiany kart

--- a/src/app/shared/components/navigation-menu/navigation-menu.component.html
+++ b/src/app/shared/components/navigation-menu/navigation-menu.component.html
@@ -1,4 +1,4 @@
-<div id="container" #theme class="theme--dark">
+<div id="container" #theme>
     <mat-toolbar>
         <app-navigation-menu-content
             (toggle)="onToggleSidenav()" 
