theming bardzo podstawowy

--- a/src/app/shared/components/filter/filter-content-sm/filter-content-sm.component.html
+++ b/src/app/shared/components/filter/filter-content-sm/filter-content-sm.component.html
@@ -1,4 +1,4 @@
-<div id="container" fxLayout="row">
+<div id="container" fxLayout="row" #theme>
     <div class="myColumn">
         <select class="mySelect" #cities (change)="cityChange()">
             <option selected disabled hidden></option>
