--- a/src/app/shared/components/filter/filter-content-sm/filter-content-sm.component.scss
+++ b/src/app/shared/components/filter/filter-content-sm/filter-content-sm.component.scss
@@ -2,7 +2,7 @@
 
 #container{
     min-height: $filtrationHeightForSM;
-    background-color: $globalBackgroundColor;
+    
 
     .myColumn{
         width: 100%;
@@ -28,5 +28,13 @@
             -webkit-appearance: none;
         }
     }
+}
+
+.light{
+    background-color: $globalBackgroundColor;
+}
+
+.dark{
+    background-color: $globalBackgroundColor_dark;
 }
 
