--- a/src/app/shared/components/filter/filter-content/filter-content.component.html
+++ b/src/app/shared/components/filter/filter-content/filter-content.component.html
@@ -1,4 +1,4 @@
-<div id="container" fxLayout="column" >
+<div id="container" fxLayout="column" #theme>
     <div class="myRow" fxLayout="row">
         <div class="cities">
             <app-checked-button-list 
