--- a/src/app/shared/components/navigation-menu/navigation-menu.component.html
+++ b/src/app/shared/components/navigation-menu/navigation-menu.component.html
@@ -1,5 +1,5 @@
-<div id="container" #theme>
-    <mat-toolbar>
+<div id="container">
+    <mat-toolbar #theme class="dark">
         <app-navigation-menu-content
             (toggle)="onToggleSidenav()" 
             fxHide.lt-md 
