--- a/src/app/shared/components/navigation-menu/navigation-menu.component.scss
+++ b/src/app/shared/components/navigation-menu/navigation-menu.component.scss
@@ -1,12 +1,16 @@
-@import "../../../../styles/variables";
+@import "../../../../styles/variables";  
 
 #container{
     .mat-toolbar{
-        @include themed() {
-            background-color: t('globalbg');
-        }
-        background-color: $navigationBackgroundColor;
         padding-top: $navigationPaddingTop; 
         min-height: $navigationHeight;
+    }
+    .light{
+        background-color: $navigationBackgroundColor;
+        color: $fontColor;
+    }
+    .dark{
+        background-color: $navigationBackgroundColor_dark;
+        color: $fontColor_dark;
     }
 }
