--- a/src/app/views/offers/components/offers-content/offers-content.component.html
+++ b/src/app/views/offers/components/offers-content/offers-content.component.html
@@ -1,4 +1,4 @@
-<div id="container" fxLayout="row">
+<div id="container" fxLayout="row" #theme>
     <div class="myColumn" [ngClass.lt-md]="'heightForSM'" >
         <router-outlet></router-outlet>
     </div>
