--- a/src/app/shared/components/navigation-menu/navigation-menu-content/navigation-menu-content.component.scss
+++ b/src/app/shared/components/navigation-menu/navigation-menu-content/navigation-menu-content.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../styles/overrides';
+@import '../../../../../styles/variables';
 
 #container{
     display: flex;
@@ -32,5 +33,8 @@
         #iconicButton{
             border: none;
         }
+    }
+    .dark{
+        color: $fontColor_dark;
     }
 }
