--- a/src/app/views/auth/components/auth-login/auth-login.component.scss
+++ b/src/app/views/auth/components/auth-login/auth-login.component.scss
@@ -22,6 +22,9 @@
             .leftControllImage{
                 @extend %leftControllImage;
             }
+            .error{
+                @extend %error;
+            }
         }
 
         #myRow{
