oferty z bazy danych + poprawione interfejsy

--- a/src/app/views/offers/components/offers-content/offer-detail/parts/extra-info/extra-info.component.html
+++ b/src/app/views/offers/components/offers-content/offer-detail/parts/extra-info/extra-info.component.html
@@ -14,13 +14,13 @@
         </app-info-box>
         <app-info-box 
             [category]="'EMP.type'"
-            [value]="getAgreementType()" 
+            [value]="offer.agreementType" 
             [icon]="'description'"
             [color]="'#ab47bc'">
         </app-info-box>
         <app-info-box 
             [category]="'EXP.lvl'"
-            [value]="getExperienceLevel()" 
+            [value]="offer.experience" 
             [icon]="'trending_up'"
             [color]="'#66BB6A'">
         </app-info-box>
