--- a/src/app/views/offers/components/offers-content/offer-detail/parts/skills/skills.component.html
+++ b/src/app/views/offers/components/offers-content/offer-detail/parts/skills/skills.component.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="technology">
-                {{ getTechnology(level) }}
+                {{ level.technology.name }}
             </div>
             <div class="stringLevel">
                 {{ getLevel(level) }}
