filtrowanie, errory, prywatne oferty, BRAK FILTROWANIA PO ROUTE

--- a/src/app/views/offers/components/offers-content/offer-detail/offer-detail.component.html
+++ b/src/app/views/offers/components/offers-content/offer-detail/offer-detail.component.html
@@ -13,4 +13,4 @@
         <apply-form></apply-form>
     </app-sheet>
 </div>
-<div class="error"*ngIf="error">sorry we Could not find this offer</div>
+<div id="error" *ngIf="error"><h3>sorry we Could not find this offer</h3></div>
