--- a/src/app/views/offers/components/offers-content/offer-detail/offer-detail.component.scss
+++ b/src/app/views/offers/components/offers-content/offer-detail/offer-detail.component.scss
@@ -9,7 +9,13 @@
             padding: 10px;
         }
     }
-    
+}
+
+#error{
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
  
