--- a/src/app/shared/components/navigation-menu/navigation-menu-content/navigation-menu-content.component.scss
+++ b/src/app/shared/components/navigation-menu/navigation-menu-content/navigation-menu-content.component.scss
@@ -24,7 +24,7 @@
             margin-right: 20px;
             &:hover{
                 cursor: pointer;
-                color: blue;
+                color: #039be5;
             }
         }
         #postAJob{
