--- a/src/app/shared/components/parts/expandable-buttons/expandable-buttons.component.html
+++ b/src/app/shared/components/parts/expandable-buttons/expandable-buttons.component.html
@@ -9,7 +9,8 @@
                 min="0"
                 step="500"
                 max="50000"
-                (input)="onSliderSalaryChange($event)">
+                (input)="onSliderSalaryChange($event)"
+                (change)="onSliderValueChoose($event)">
             </mat-slider>
         </div>
     </mat-menu>
