--- a/src/app/views/offers/components/offers-content/offers-list/offers-list.component.scss
+++ b/src/app/views/offers/components/offers-content/offers-list/offers-list.component.scss
@@ -1,3 +1,4 @@
+@import '../../../../../../styles/variables';
 .container{
     min-height: 100%;
     width: 100%;
@@ -11,5 +12,11 @@
         max-height: 90px;
         margin-bottom: 10px;
     } 
+    #error{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
+    }
 }
 
